--- a/index.html
+++ b/index.html
@@ -15,15 +15,9 @@
   <p> Last Name: <input id = 'lastNameInput' type = 'lastname'> </p>
   <br>
   <p><button id='random'>Random Nickname</button> 
-    <button id='all'>All Nicknames</button> </p>
+    <button id='all'> All Nicknames</button> </p>
   <hr>
-  <h2> <span id="fname1"> . </span> <span id="name1"> . </span> <span id="lname1"> . </span> </h2>
-  <h2> <span id="fname2"> . </span> <span id="name2"> . </span> <span id="lname2"> . </span> </h2>
-  <h2> <span id="fname3"> . </span> <span id="name3"> . </span> <span id="lname3"> . </span> </h2>
-  <h2> <span id="fname4"> . </span> <span id="name4"> . </span> <span id="lname4"> . </span> </h2>
-  <h2> <span id="fname5"> . </span> <span id="name5"> . </span> <span id="lname5"> . </span> </h2>
-  <h2> <span id="fname6"> . </span> <span id="name6"> . </span> <span id="lname6"> . </span> </h2>
-  
+  <h2> <span id = 'name'> </span> </h2> 
   <script src="main.js"></script>
 </body>
 
